v1.0 beta6 release